# tree-sitter-gherkin

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gherkin/: binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/: example.feature
test/corpus/: feature-file.txt
