[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gherkin"
description = "Gherkin grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "gherkin"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "George Tsopanoglou", email = "gtsop+github@protonmail.com" }]
requires-python = ">=3.10"
license.text = "AGPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/gtsop/tree-sitter-gherkin.git"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
